# EdgeFlow

./: README.md
creek/: AppliedPTransform.h  BUILD  BoundedWindow.cpp  BoundedWindow.h  Bundle.h  BundleContainer.cpp  BundleContainer.h  CMakeLists.txt  Create.h  DoFn.h  Executor.cpp  LookAheadPipelineVisitor.cpp  OffsetRangeTracker.h  PValues.cpp  PValues.h  README.md  Record.h  SeqBuf.cpp  SeqBuf.h  SeqBuf2.cpp  SeqBuf2.h  SeqBundle.cpp  SeqBundle.h  SeqWinKeyFrag.h  SetArray.cpp  ValueContainer.h  Values.cpp  Values.h  WinKeyFrag.h  WinKeySeqFrag.h  Window.h  WindowFn.h  WindowingStrategy.h  backup-repo.sh  build.sh  config.h  contributors.txt  creek-map.h  creek-types.h  env-xzl.sh  (+7 more)
creek/Join/: Join.h  JoinEvaluator.h  JoinEvaluator1.h  JoinSeq.cpp  JoinSeq.h  JoinSeqEval.h
creek/Mapper/: GrepMapper.cpp  Mapper.h  SimpleMapper.h  SimpleMapperEvaluator.h  WhereSeqMapper.cpp  WhereSeqMapper.h  WhereSeqMapper0.h  WhereSeqMapperEval.h  WinMapper.h  WinMapperEvaluator.h  WindowedGrepMapper.cpp  WordCountMapper.cpp  WordCountMapper.h  WordCountMapperEvaluator.h
creek/Sink/: RecordBitmapBundleSinkEvaluator1.h  RecordBundleSink.cpp  RecordBundleSinkEvaluatorJD.h  RecordSeqBundleSink.cpp  RecordSeqBundleSink.h  RecordSeqBundleSinkEval.h  Sink.cpp  Sink.h  WinKeySeqBundleSink.cpp  WinKeySeqBundleSink.h  WinKeySeqBundleSinkEval.h  WindowsBundleSink.cpp  WindowsBundleSinkEvaluator.h
creek/Source/: Bounded.h  BoundedCol2Evaulator.h  BoundedEvaulator.h  NetworkLatencySource.h  NetworkLatencySourceEvaluator.h  SourceSeq.cpp  SourceSeq.h  SourceSeqEval.h  SourceSeqZmq.cpp  SourceSeqZmq.h  SourceSeqZmqEval.h  SourceZmq.h  SourceZmqEval.h  Unbounded-tweets.h  Unbounded.cpp  Unbounded.h  UnboundedInMemEvaluator.h  UnboundedInMemEvaluatorBase.h  UnboundedInMemEvaluator_2out.h  UnboundedInMemEvaluator_Join.h  UnboundedSeq.cpp  UnboundedSeq.h  UnboundedSeqEval.h  Unbounded_Join.h
creek/Win/: FixedWindowInto.cpp  FixedWindowInto.h  FixedWindowIntoEvaluator.h  GBKSeq.h  GBKSeqEval.h  GlobalWindow.h  SeqWinKeyFrag.h  SessionWindowInto.h  SessionWindowIntoEvaluator.h  WinGBK.cpp  WinGBK.h  WinGBKEvaluator.h  WinGBKSeq.cpp  WinGBKSeq.h  WinGBKSeqEval.h
creek/WinKeyReducer/: SeqWinKeyReducer.cpp  SeqWinKeyReducer.h  SeqWinKeyReducerEval.cpp  SeqWinKeyReducerEval.h  WinKeyReducer-netmon.cpp  WinKeyReducer-wc-common.h  WinKeyReducer-wc-recordbundle.cpp  WinKeyReducer-wc-winbundle.cpp  WinKeyReducer.cpp  WinKeyReducer.h  WinKeyReducerEval-netmon.cpp  WinKeyReducerEval-wc-common.h  WinKeyReducerEval-wc-recordbundle.cpp  WinKeyReducerEval.h
creek/WinSum/: WinSum-dispatch-eval.h  WinSum-template.h  WinSumBase.cpp  WinSumEval.h  WinSumSeq.cpp  WinSumSeq.h  WinSumSeqEval.h  WinSumTvEval.h  WinSum_addlong.cpp  WinSum_addlong.h  WinSum_addlong_tvpair.cpp  WinSum_addlong_tvpair.h  WinSum_mergeset.cpp  WinSum_mergeset.h  WinSum_mergevector.cpp  WinSum_mergevector.h  WindowedSumEvaluator1-tvpair.cpp
creek/core/: EvaluationBundleContext.cpp  EvaluationBundleContext.h  Pipeline.cpp  Pipeline.h  SingleInputTransformEvaluator.h  StatefulTransform.h  Transform.cpp  Transforms-JD.cpp  Transforms-JDD.cpp  Transforms-multi.h  Transforms.h
creek/micro/: alloc-pre.cpp  fp16.c  test-std-groupby.cpp  test-std-sort.cpp  xplane_test.c
creek/test/: CMakeLists.txt  CreateTest.cpp  convert-debs14.py  digit-gen.py  gen-digit.py  gen-kv.py  networklatency.cpp  regression.py  test-common.cpp  test-common.h  test-distinct.cpp  test-grep.cpp  test-join-2.cpp  test-join.cpp  test-kaskade.cpp  test-tweet.cpp  test-wc.cpp  test-wingrep.cpp  test-winsum-long.cpp
creek/test/seq/: test-joinfilter.cpp  test-joinseq.cpp  test-power.cpp  test-seq.cpp  test-seqbuf.cpp  test-source-3out.cpp  test-sourcesink.cpp  test-whereseq.cpp  test-win-sum.cpp  test-wingbk-gbk.cpp  test-wingbk-k2v.cpp  test-wingbk-med.cpp  test-wingbk-sum.cpp  test-wingbk-topcount.cpp  test-wingbk-topv.cpp  test-wingbk-uniquecount.cpp  test-wingbk.cpp
creek/xplane/: CMakeLists.txt  CMakeLists.txt.backup  README  env-xzl.sh  knl-build.sh  knl-upload.sh  main.c  sub.mk  xplane_lib.cpp
creek/xplane/Sort-Merge/AVX-512-Sort-Merge/: README  bitonic_sort_merge_core.cpp  bitonic_sort_merge_core.h  sort_merge.cpp  test_bitonic_sort_merge_core.cpp  test_sort_merge.cpp  test_x2_bitonic_sort_merge_core.cpp  test_x2_sort_merge.cpp  test_xplane_sort_merge.cpp  x2_bitonic_sort_merge_core.cpp  x2_bitonic_sort_merge_core.h  x2_sort_merge.cpp  x2_sort_merge.h  xplane-types.h  xplane_sort_merge.cpp  xplane_sort_merge.h
creek/xplane/Sort-Merge/COMMON-Sort-Merge/: common_sort_merge.c  common_sort_stable.cpp  common_sort_stable_kp.c
creek/xplane/Sort-Merge/NEON-Sort-Merge/: xplane_merge.c  xplane_sort.c  xplane_sort_core.c  xplane_sort_x1.c  xplane_sort_x3.c  xplane_sort_x4.c
creek/xplane/include/: common-types.h  log.h  xplane_lib.h
creek/xplane/include/mm/: batch.h  sbuff.h
creek/xplane/include/sort/: WikiSort.h
creek/xplane/include/xplane/: index.h  params.h  qsort_cmp.h  trace.h  utils.h  xfunc.h  xplane_common.h  (+11 more)
creek/xplane/mm/: batch.c  mempool.cpp
creek/xplane/ubench/: CMakeLists.txt  filter.c  join.c  join_kp.c  knl_sort_merge_kp.c  median.c  merge.c  merge_kp.c  merge_parallel.c  merge_parallel_kp.c  sort.c  sort_kp.c  sumcount.c  test.c  test_expand.c  test_parallel_agg_kp.c  test_scatter_gather.cpp  test_segment_kp.c  test_stable_sort_kp.c  topk.c  ubench.h
creek/xplane/xplane/: index.c  parallel_agg_kp.cpp  parallel_merge_kp.cpp  utils.c  xplane_filter.c  xplane_interface.c  xplane_join.c  xplane_median.c  xplane_misc.c  xplane_segment.c  xplane_sumcount.c  xplane_uarray.c
creek/zmq_stream/: .gitignore  CMakeLists.txt  README  options-config.hpp  receiver.cpp  sender.cpp
creek/zmq_stream/Source/: FileSource.hpp  RandomSource.hpp  Source.hpp
creek/zmq_stream/Utils/: hexdump.hpp  log.h
creek/zmq_stream/perf/: inproc_thr.cpp  local_thr.cpp  platform.hpp  remote_thr.cpp
xplane_lib/ubench/: CMakeLists.txt  filter.c  join.c  median.c  median.c.backup  merge.c  sort.c  sumcount.c  test.c  topk.c  ubench.h
xplane_lib/ubench/Debug/: push.sh
(+76 files in other folders)
